--- a/notebook/model training.ipynb
+++ b/notebook/model training.ipynb
@@ -1,6 +1,303 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.1 Import Data and Required Packages\n",
+    "##### Importing Pandas, Numpy, Matplotlib, Seaborn and Warings Library."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Basic Import\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt \n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Modelling\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, roc_auc_score, roc_curve\n",
+    "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier, GradientBoostingClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+    "from xgboost import XGBClassifier\n",
+    "from catboost import CatBoostClassifier\n",
+    "from lightgbm import LGBMClassifier\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Import the CSV Data as Pandas DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd .read_csv('data\\crime_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Show Top 5 Records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Cross_Street</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Date_Reported</th>\n",
+       "      <th>Date_Occurred</th>\n",
+       "      <th>Time_Occurred</th>\n",
+       "      <th>Area_ID</th>\n",
+       "      <th>Area_Name</th>\n",
+       "      <th>Reporting_District_no</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Victim_Age</th>\n",
+       "      <th>Victim_Sex</th>\n",
+       "      <th>Victim_Descent</th>\n",
+       "      <th>Premise_Code</th>\n",
+       "      <th>Premise_Description</th>\n",
+       "      <th>Weapon_Used_Code</th>\n",
+       "      <th>Weapon_Description</th>\n",
+       "      <th>Status</th>\n",
+       "      <th>Status_Description</th>\n",
+       "      <th>Crime_Category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4500    CARPENTER                    AV</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.1522</td>\n",
+       "      <td>-118.3910</td>\n",
+       "      <td>03-09-2020 00:00</td>\n",
+       "      <td>03-06-2020 00:00</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>15</td>\n",
+       "      <td>N Hollywood</td>\n",
+       "      <td>1563</td>\n",
+       "      <td>...</td>\n",
+       "      <td>75</td>\n",
+       "      <td>M</td>\n",
+       "      <td>W</td>\n",
+       "      <td>101</td>\n",
+       "      <td>STREET</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>IC</td>\n",
+       "      <td>Invest Cont</td>\n",
+       "      <td>Property Crimes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>45TH                         ST</td>\n",
+       "      <td>ALAMEDA                      ST</td>\n",
+       "      <td>34.0028</td>\n",
+       "      <td>-118.2391</td>\n",
+       "      <td>02/27/2020 12:00:00 AM</td>\n",
+       "      <td>02/27/2020 12:00:00 AM</td>\n",
+       "      <td>1345</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Newton</td>\n",
+       "      <td>1367</td>\n",
+       "      <td>...</td>\n",
+       "      <td>41</td>\n",
+       "      <td>M</td>\n",
+       "      <td>H</td>\n",
+       "      <td>216</td>\n",
+       "      <td>SWAP MEET</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>STRONG-ARM (HANDS, FIST, FEET OR BODILY FORCE)</td>\n",
+       "      <td>IC</td>\n",
+       "      <td>Invest Cont</td>\n",
+       "      <td>Property Crimes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>600 E  MARTIN LUTHER KING JR        BL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.0111</td>\n",
+       "      <td>-118.2653</td>\n",
+       "      <td>08/21/2020 12:00:00 AM</td>\n",
+       "      <td>08/21/2020 12:00:00 AM</td>\n",
+       "      <td>605</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Newton</td>\n",
+       "      <td>1343</td>\n",
+       "      <td>...</td>\n",
+       "      <td>67</td>\n",
+       "      <td>M</td>\n",
+       "      <td>B</td>\n",
+       "      <td>501</td>\n",
+       "      <td>SINGLE FAMILY DWELLING</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>IC</td>\n",
+       "      <td>Invest Cont</td>\n",
+       "      <td>Property Crimes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14900    ORO GRANDE                   ST</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.2953</td>\n",
+       "      <td>-118.4590</td>\n",
+       "      <td>11-08-2020 00:00</td>\n",
+       "      <td>11-06-2020 00:00</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Mission</td>\n",
+       "      <td>1924</td>\n",
+       "      <td>...</td>\n",
+       "      <td>61</td>\n",
+       "      <td>M</td>\n",
+       "      <td>H</td>\n",
+       "      <td>101</td>\n",
+       "      <td>STREET</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>IC</td>\n",
+       "      <td>Invest Cont</td>\n",
+       "      <td>Property Crimes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7100 S  VERMONT                      AV</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>33.9787</td>\n",
+       "      <td>-118.2918</td>\n",
+       "      <td>02/25/2020 12:00:00 AM</td>\n",
+       "      <td>02/25/2020 12:00:00 AM</td>\n",
+       "      <td>1130</td>\n",
+       "      <td>12</td>\n",
+       "      <td>77th Street</td>\n",
+       "      <td>1245</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>X</td>\n",
+       "      <td>X</td>\n",
+       "      <td>401</td>\n",
+       "      <td>MINI-MART</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>STRONG-ARM (HANDS, FIST, FEET OR BODILY FORCE)</td>\n",
+       "      <td>IC</td>\n",
+       "      <td>Invest Cont</td>\n",
+       "      <td>Property Crimes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   Location                     Cross_Street  \\\n",
+       "0   4500    CARPENTER                    AV                              NaN   \n",
+       "1           45TH                         ST  ALAMEDA                      ST   \n",
+       "2    600 E  MARTIN LUTHER KING JR        BL                              NaN   \n",
+       "3  14900    ORO GRANDE                   ST                              NaN   \n",
+       "4   7100 S  VERMONT                      AV                              NaN   \n",
+       "\n",
+       "   Latitude  Longitude           Date_Reported           Date_Occurred  \\\n",
+       "0   34.1522  -118.3910        03-09-2020 00:00        03-06-2020 00:00   \n",
+       "1   34.0028  -118.2391  02/27/2020 12:00:00 AM  02/27/2020 12:00:00 AM   \n",
+       "2   34.0111  -118.2653  08/21/2020 12:00:00 AM  08/21/2020 12:00:00 AM   \n",
+       "3   34.2953  -118.4590        11-08-2020 00:00        11-06-2020 00:00   \n",
+       "4   33.9787  -118.2918  02/25/2020 12:00:00 AM  02/25/2020 12:00:00 AM   \n",
+       "\n",
+       "   Time_Occurred  Area_ID    Area_Name  Reporting_District_no  ...  \\\n",
+       "0           1800       15  N Hollywood                   1563  ...   \n",
+       "1           1345       13       Newton                   1367  ...   \n",
+       "2            605       13       Newton                   1343  ...   \n",
+       "3           1800       19      Mission                   1924  ...   \n",
+       "4           1130       12  77th Street                   1245  ...   \n",
+       "\n",
+       "   Victim_Age Victim_Sex  Victim_Descent Premise_Code     Premise_Description  \\\n",
+       "0          75          M               W          101                  STREET   \n",
+       "1          41          M               H          216               SWAP MEET   \n",
+       "2          67          M               B          501  SINGLE FAMILY DWELLING   \n",
+       "3          61          M               H          101                  STREET   \n",
+       "4           0          X               X          401               MINI-MART   \n",
+       "\n",
+       "   Weapon_Used_Code                              Weapon_Description  Status  \\\n",
+       "0               NaN                                             NaN      IC   \n",
+       "1             400.0  STRONG-ARM (HANDS, FIST, FEET OR BODILY FORCE)      IC   \n",
+       "2               NaN                                             NaN      IC   \n",
+       "3               NaN                                             NaN      IC   \n",
+       "4             400.0  STRONG-ARM (HANDS, FIST, FEET OR BODILY FORCE)      IC   \n",
+       "\n",
+       "  Status_Description   Crime_Category  \n",
+       "0        Invest Cont  Property Crimes  \n",
+       "1        Invest Cont  Property Crimes  \n",
+       "2        Invest Cont  Property Crimes  \n",
+       "3        Invest Cont  Property Crimes  \n",
+       "4        Invest Cont  Property Crimes  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -9,8 +306,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
