--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -4275,6 +4275,58 @@
     "file_path = os.path.join('data', 'filtered_data.csv')\n",
     "df_filtered.to_csv(file_path,index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df= pd.read_csv('data/crime_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Location                                SLAUSON                      AV\n",
+       "Cross_Street                            HALLDALE                     AV\n",
+       "Latitude                                                        33.9892\n",
+       "Longitude                                                     -118.3024\n",
+       "Date_Reported                                    01/24/2020 12:00:00 AM\n",
+       "Date_Occurred                                    01/24/2020 12:00:00 AM\n",
+       "Time_Occurred                                                      2300\n",
+       "Area_ID                                                              12\n",
+       "Area_Name                                                   77th Street\n",
+       "Reporting_District_no                                              1235\n",
+       "Part 1-2                                                              2\n",
+       "Modus_Operandi                                           1213 0400 1822\n",
+       "Victim_Age                                                            0\n",
+       "Victim_Sex                                                            X\n",
+       "Victim_Descent                                                        X\n",
+       "Premise_Code                                                        102\n",
+       "Premise_Description                                            SIDEWALK\n",
+       "Weapon_Used_Code                                                  400.0\n",
+       "Weapon_Description       STRONG-ARM (HANDS, FIST, FEET OR BODILY FORCE)\n",
+       "Status                                                               IC\n",
+       "Status_Description                                          Invest Cont\n",
+       "Crime_Category                                           Violent Crimes\n",
+       "Name: 16000, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[16000]"
+   ]
   }
  ],
  "metadata": {
