--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -4278,7 +4278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4288,44 +4288,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Premise_Description']=df['Premise_Description'].fillna('NOT APPLICABLE')\n",
+    "df['Weapon_Description']=df['Weapon_Description'].fillna('NOT APPLICABLE')\n",
+    "df['Weapon_Used_Code']=df['Weapon_Used_Code'].fillna(float(0.0))\n",
+    "\n",
+    "# Create dictionaries for ID-Name or Code-Description pairs\n",
+    "area_dict = df[['Area_ID', 'Area_Name']].drop_duplicates().set_index('Area_ID').to_dict()['Area_Name']\n",
+    "premise_dict = df[['Premise_Code', 'Premise_Description']].drop_duplicates().set_index('Premise_Code').to_dict()['Premise_Description']\n",
+    "weapon_dict = df[['Weapon_Used_Code', 'Weapon_Description']].drop_duplicates().set_index('Weapon_Used_Code').to_dict()['Weapon_Description']\n",
+    "status_dict = df[['Status', 'Status_Description']].drop_duplicates().set_index('Status').to_dict()['Status_Description']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Location                                SLAUSON                      AV\n",
-       "Cross_Street                            HALLDALE                     AV\n",
-       "Latitude                                                        33.9892\n",
-       "Longitude                                                     -118.3024\n",
-       "Date_Reported                                    01/24/2020 12:00:00 AM\n",
-       "Date_Occurred                                    01/24/2020 12:00:00 AM\n",
-       "Time_Occurred                                                      2300\n",
-       "Area_ID                                                              12\n",
-       "Area_Name                                                   77th Street\n",
-       "Reporting_District_no                                              1235\n",
-       "Part 1-2                                                              2\n",
-       "Modus_Operandi                                           1213 0400 1822\n",
-       "Victim_Age                                                            0\n",
-       "Victim_Sex                                                            X\n",
-       "Victim_Descent                                                        X\n",
-       "Premise_Code                                                        102\n",
-       "Premise_Description                                            SIDEWALK\n",
-       "Weapon_Used_Code                                                  400.0\n",
-       "Weapon_Description       STRONG-ARM (HANDS, FIST, FEET OR BODILY FORCE)\n",
-       "Status                                                               IC\n",
-       "Status_Description                                          Invest Cont\n",
-       "Crime_Category                                           Violent Crimes\n",
-       "Name: 16000, dtype: object"
+       "0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.iloc[16000]"
+    "df.Weapon_Description.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'NOT APPLICABLE'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "premise_dict[418]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Area_Name'].isna().sum()"
    ]
   }
  ],
